--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -104,7 +104,7 @@
   award_name={Nobel Prize}
 }
 
-@INPROCEEDINGS{10743397,
+@article{10743397,
   author={Yau, William C. and Zhang, Weijian and Weerasooriya, Hashan Kavinga and Chan, Stanley H.},
   booktitle={2024 IEEE 26th International Workshop on Multimedia Signal Processing (MMSP)}, 
   title={Analysis and Improvement of Rank-Ordered Mean Algorithm in Single-Photon LiDAR}, 
@@ -112,7 +112,12 @@
   volume={},
   number={},
   pages={1-6},
+  abstract={Depth estimation using a single-photon LiDAR is often solved by a matched filter. It is, however, error-prone in the presence of background noise. A commonly used technique to reject background noise is the rank-ordered mean (ROM) filter previously reported by Shin et al. (2015). ROM rejects noisy photon arrival timestamps by selecting only a small range of them around the median statistics within its local neighborhood. Despite the promising performance of ROM, its theoretical performance limit is unknown. In this paper, we theoretically characterize the ROM performance by showing that ROM fails when the reflectivity drops below a threshold predetermined by the depth and signal-to-background ratio, and its accuracy undergoes a phase transition at the cutoff. Based on our theory, we propose an improved signal extraction technique by selecting tight timestamp clusters. Experimental results show that the proposed algorithm improves depth estimation performance over ROM by 3 orders of magnitude at the same signal intensities, and achieves high image fidelity at noise levels as high as 17 times that of signal. The code for this project is made available at https://github.com/yauwilliam69/NCFforLiDAR.git.},
   keywords={Reflectivity;Matched filters;Laser radar;Accuracy;Three-dimensional displays;Signal processing algorithms;Background noise;Read only memory;Photonics;Signal to noise ratio;Rank-ordered mean (ROM);depth estimation;single-photon LiDAR 3-D imaging;computational imaging;con-vex optimization;first-photon imaging;LiDAR;low-light imaging;Poisson noise;single-photon detection;time-of-flight imaging},
-  doi={10.1109/MMSP61759.2024.10743397}
+  doi={10.1109/MMSP61759.2024.10743397},
+  ISSN={2473-3628},
+  month={Oct},
 }
+
+
 
