--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -105,6 +105,7 @@
 }
 
 @article{10743397,
+  bibtex_show={true},
   author={Yau, William C. and Zhang, Weijian and Weerasooriya, Hashan Kavinga and Chan, Stanley H.},
   booktitle={2024 IEEE 26th International Workshop on Multimedia Signal Processing (MMSP)}, 
   title={Analysis and Improvement of Rank-Ordered Mean Algorithm in Single-Photon LiDAR}, 
