--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -118,6 +118,9 @@
   doi={10.1109/MMSP61759.2024.10743397},
   ISSN={2473-3628},
   month={Oct},
+  dimensions={true},
+  google_scholar_id={qyhmnyLat1gC},
+  selected={true},
 }
 
 
